[project]
name = "ryvox-email-env"
version = "0.1.0"
description = "Ryvox AI Email Classification Environment"
authors = [
    { name = "SaiKishore P" }
]

# ✅ VERY IMPORTANT
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv>=0.1.13"
]

# ✅ CRITICAL FIX
[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"